// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/UserProjectsWrapper With Projects 1`] = `
<div
  className="max-w-screen-xl mx-auto p-6 block md:grid gap-4 grid-cols-12"
  style={
    Object {
      "padding": "5vmax 0",
    }
  }
>
  <section
    className="col-span-3"
  >
    <h1
      className="text-3xl text-blue-500 font-bold mt-6"
    >
      Meine Projekte
    </h1>
    <div
      className="mt-8"
    >
      <a
        className="text-lg px-4 py-2 font-sans transition cursor-pointer focus-offset focus:ring-blue-500 bg-blue-500 text-white hover:opacity-60"
        href="/account/projects/new"
        onClick={[Function]}
        onMouseEnter={[Function]}
        variant="primary"
      >
        Neues Projekt
      </a>
      <nav
        aria-label="Projekte-Navigation"
        className="mt-12"
      >
        <ul>
          <li
            aria-labelledby="user-project-item-1"
            className="my-4 border-opacity-100"
          >
            <button
              className="py-0 pl-4 border-l-2 border-blue-400 focus-offset text-left transition focus:ring-blue-500 text-blue-500 border-opacity-100"
              id="user-project-item-1"
              onClick={[Function]}
            >
              Project A
            </button>
          </li>
          <li
            aria-labelledby="user-project-item-2"
            className="my-4 border-opacity-0"
          >
            <button
              className="py-0 pl-4 border-l-2 border-blue-400 focus-offset text-left transition focus:ring-blue-500 text-gray-500 border-opacity-0"
              id="user-project-item-2"
              onClick={[Function]}
            >
              Project B
            </button>
          </li>
          <li
            aria-labelledby="user-project-item-3"
            className="my-4 border-opacity-0"
          >
            <button
              className="py-0 pl-4 border-l-2 border-blue-400 focus-offset text-left transition focus:ring-blue-500 text-gray-500 border-opacity-0"
              id="user-project-item-3"
              onClick={[Function]}
            >
              Project C
            </button>
          </li>
        </ul>
      </nav>
    </div>
  </section>
  <main
    className="md:col-span-9 mt-6 md:mt-0 bg-white shadow-md"
  >
    <h1>
      Insert here: the main content
    </h1>
  </main>
</div>
`;

exports[`Storyshots Layout/UserProjectsWrapper Without Projects 1`] = `
<div
  className="max-w-screen-xl mx-auto p-6 block md:grid gap-4 grid-cols-12"
  style={
    Object {
      "padding": "5vmax 0",
    }
  }
>
  <section
    className="col-span-3"
  >
    <h1
      className="text-3xl text-blue-500 font-bold mt-6"
    >
      Meine Projekte
    </h1>
    <div
      className="mt-8"
    >
      <a
        className="text-lg px-4 py-2 font-sans transition cursor-pointer focus-offset focus:ring-blue-500 bg-blue-500 text-white hover:opacity-60"
        href="/account/projects/new"
        onClick={[Function]}
        onMouseEnter={[Function]}
        variant="primary"
      >
        Neues Projekt
      </a>
    </div>
  </section>
  <main
    className="md:col-span-9 mt-6 md:mt-0 bg-white shadow-md"
  >
    <h1>
      Insert here: the main content
    </h1>
  </main>
</div>
`;
